fix(ServiceConfiguration): service config dropdown content overflows

--- a/src/styles/views/services/styles.less
+++ b/src/styles/views/services/styles.less
@@ -73,6 +73,15 @@
       align-items: center;
     }
   }
+
+  .services-version-text {
+    min-width: 0;
+    width: auto;
+  }
+
+  .service-version-dropdown-wrapper {
+    width: 100%;
+  }
 }
 
 .filter-tasks-bar {
